terraform/k8s-manifest/hello-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  # annotations:
  #   metallb.universe.tf/loadBalancerIPs: 192.168.178.9
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
  type: ClusterIP # LoadBalancer
