terraform/k8s-manifest/hello-nginx/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx
 annotations:
   cert-manager.io/issuer: "self-signed-ca"
spec:
 tls:
   - hosts:
     - test.example.com
     secretName: test-example-com
 rules:
   - host: test.example.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx
               port:
                 number: 80
